# rust-loop-drop

./: .gitignore  Cargo.toml  Cross.toml  README.md  loopdrop-config.json  push
scripts/: Dockerfile  build  loop-drop.service  push  restart  setup
scripts/recording_to_als/: apply-audio-levels.js  index.js  package-lock.json  package.json  template.als.ejs
scripts/rust-crosscompiler-arm/: Dockerfile
scripts/rust-crosscompiler-arm/include/: arm-linux-gnueabihf-g++-with-link-search  cargo  config  sources.list  (+3 more)
src/: audio_recorder.rs  chunk.rs  clock_source.rs  config.rs  lfo.rs  loop_event.rs  loop_grid_launchpad.rs  loop_recorder.rs  loop_state.rs  loop_transform.rs  main.rs  midi_connection.rs  midi_keys.rs  midi_time.rs  output_value.rs  scale.rs  scheduler.rs  scheduler2.rs  scheduler4.rs  throttled_output.rs  trigger_envelope.rs
src/controllers/: clock_pulse.rs  duck_output.rs  init.rs  launchpad_tempo.rs  mod.rs  mod_twister.rs  twister.rs  umi3.rs  vt4_key.rs
src/devices/: blackbox_drums.rs  blackbox_perc.rs  blackbox_sample.rs  blackbox_slicer.rs  blackbox_slicer_offset.rs  blofeld_drums.rs  cc_triggers.rs  choke_switch.rs  cycles_drums.rs  double_drummer.rs  k_board.rs  k_mix.rs  keyboard.rs  midi_keys.rs  midi_triggers.rs  mod.rs  mono_midi_keys.rs  mother_32.rs  multi.rs  offset.rs  pitch_offset_chunk.rs  root_offset_chunk.rs  root_select.rs  scale_offset_chunk.rs  scale_select.rs  sp404.rs  sp404_offset.rs  sp404mk2.rs  tr08.rs  tr6s.rs  twister.rs  umi3.rs  velocity_map.rs  volca_bass.rs  volca_keys.rs  volca_sample.rs  vt3.rs  vt4.rs  vt4_key.rs
