[workspace]

[package]
name = "loop-drop"
version = "0.0.0"
publish = false

[profile.release]
debug = true

[dependencies]
indexmap = "1.6.1"
midir = "0.5.0"
lazy_static = "1.0"
regex = "0.2.5"
circular-queue = "0.2.0"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"